--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,8 @@
 <!-- views/index.erb -->
 <ul>
   <% @files.each do |file|%>
-    <li><%= file %></li>
+    <li>
+       <a href="<%=file%>"> <%=file%> </a> 
+    </li>
   <% end %>
 </ul>
