implemented assignment 6 lesson 8 RB175 - handling requests for nonexistent documents

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,10 @@
 <!-- views/index.erb -->
+<% if session[:error] %>
+  <div class="flash error">
+    <p><%= session.delete(:error) %></p>
+  </div>
+<% end %>
+
 <ul>
   <% @files.each do |file|%>
     <li>
