updated cms.rb and index.erb to name variables the same as LS solution

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,6 @@
 <!-- views/index.erb -->
-<% if session[:error] %>
-  <div class="flash error">
-    <p><%= session.delete(:error) %></p>
-  </div>
+<% if session[:message] %>
+  <p><%= session.delete(:message) %></p>
 <% end %>
 
 <ul>
