implemented assignment 8 of lesson 8 RB175 - editing document content

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,9 +4,10 @@
 <% end %>
 
 <ul>
-  <% @files.each do |file|%>
+  <% @files.each do |file| %>
     <li>
-       <a href="<%=file%>"> <%=file%> </a> 
+      <a href="/<%= file %>"><%= file %></a>
+      <a href="/<%= file %>/edit">edit</a>
     </li>
   <% end %>
 </ul>
