implemented assignment 10 lesson 8 RB175 - adding global style and behaviour

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link href="/cms.css" rel="stylesheet" type="text/css" />
     <title>File-based CMS Project</title>
   </head>
 
