--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <!-- views/index.erb -->
 <% if session[:message] %>
-  <p><%= session.delete(:message) %></p>
+  <p class="message"><%= session.delete(:message) %></p>
 <% end %>
 
 <ul>
