--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,6 +7,11 @@
   </head>
 
   <body>
+    <% if session[:message] %>
+    <p class="message"><%= session.delete(:message) %></p>
+    <% end %>
+
     <%= yield %>
+    
   </body>
 </html>
